@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

class Artikel {
    + ArtikelID: int(11)
    + Titel: varchar(200)
    + Text: text
    + Datum: date
    + Carousel: tinyint(1)
    + AutorID: int(11)
    + BilderID: int(11)
}

class Autoren {
    + AutorID: int(11)
    + Name: varchar(200)
}

class Bilder {
    + BilderID: int(11)
    + Pfad: varchar(200)
    + AltText: varchar(200)
}

class Kategorie_Artikel {
    + KategorieID: int(11)
    + ArtikelID: int(11)
}

class Kategorien {
    + KategorieID: int(11)
    + Bezeichnung: varchar(200)
}

class Kommentare {
    + KommentarID: int(11)
    + KommentierendeID: int(11)
    + Betreff: varchar(200)
    + Kommentar: text
    + Datum: date
}

class Kommentare_Artikel {
    + KommentarID: int(11)
    + ArtikelID: int(11)
}

class Kommentierende {
    + KommentierendeID: int(11)
    + Name: varchar(120)
    + Email: varchar(120)
    + Homepage: varchar(120)
}

' روابط بین جداول
Autoren ||--o{ Artikel : "AutorID"
Bilder ||--o{ Artikel : "BilderID"
Artikel ||--o{ Kategorie_Artikel : "ArtikelID"
Kategorien ||--o{ Kategorie_Artikel : "KategorieID"
Kommentierende ||--o{ Kommentare : "KommentierendeID"
Artikel ||--o{ Kommentare_Artikel : "ArtikelID"
Kommentare ||--o{ Kommentare_Artikel : "KommentarID"

@enduml